# cache_simulator

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/cache/: cache_checkpoint.h  cacheinstance.h  cachereplacement.h  checkpoint_replacement.h
src/cache/base/: 2q.h  arc.h  cache.h  clock.h  defs.h  fifo.h  fifo2.h  larc.h  larcghost.h  lirs.h  lru.h  mq.h  opt.h  slru.h  tinylfu.h
src/cache/base/tinylfu/: detail.hpp  lru.h  slru.h
src/cache/checkpoint/: cfifo.h  cfifo2.h  clru.h  cslru.h
src/include/: defs.h  filemgr.h
src/parse/: chunk_parser.h  feature_parser.h  parser.h  simple_parser.h
src/simulate/: CMakeLists.txt  replace.cc  replace.h
src/statistic/: .max_bhr.cc.swp  CMakeLists.txt  max_bhr.cc  max_bhr.h
src/test/: CMakeLists.txt  file_lock_test.cc  fileio_test.cc  max_bhr_test.cc  replace_test.cc  thread_pool_test.cc  util_test.cc
src/util/: CMakeLists.txt  singleton.h  util.h
src/util/fileio/: file_reader.cc  file_reader.h  file_writer.cc  file_writer.h
src/util/hash/: murmurhash.h
src/util/mutex/: file_lock.h
src/util/threadpool/: thread_pool.cc  thread_pool.h
